# jquant_netnet_backtest_collector

./: .env_template  .gitignore  README.md  backtestingNCAVpandas.py  japan_screen_pe_ncav2.xlsx  jquant_calc.py  jquant_calculate_ncav.py  jquant_client.py  jquant_get_financial_data.py  jquant_get_tickers.py  jquant_netnet_backtest.py  loader.py  loader_with_filter.py  lumi.py  main.py  netnet_csv_to_tickerlist.py  netnet_screener.py  ohlc_streamcollector.py  perflogger.py  pyproject.toml  ruff.toml  streamcollector.py  structlogger.py  test.py  ticker_merger.py
all_tickers/: all_tickers.txt
jquant_logs/: performance_1.csv  performance_10.csv  performance_3.csv  performance_5.csv
jquant_tickers/: jquant_tickers_2002_12_21.txt  jquant_tickers_2008_12_21.txt  jquant_tickers_2009_02_21.txt  jquant_tickers_2009_12_21.txt  jquant_tickers_2010_12_21.txt  jquant_tickers_2011_12_21.txt  jquant_tickers_2012_12_21.txt  jquant_tickers_2013_12_21.txt  jquant_tickers_2014_12_21.txt  jquant_tickers_2015_12_21.txt  jquant_tickers_2016_12_21.txt  jquant_tickers_2017_12_21.txt  jquant_tickers_2018_12_21.txt  jquant_tickers_2019_12_21.txt  jquant_tickers_2020_12_21.txt  jquant_tickers_2021_12_21.txt  jquant_tickers_2022_12_21.txt  jquant_tickers_2023_06_21.txt  jquant_tickers_2023_06_22.txt  jquant_tickers_2023_09_01.txt  jquant_tickers_2023_10_21.txt  jquant_tickers_2023_12_21.txt  jquant_tickers_2024_02_21.txt  jquant_tickers_2024_04_21.txt  jquant_tickers_2024_06_21.txt  jquant_tickers_2024_09_01.txt  jquant_tickers_2024_10_21.txt  jquant_tickers_2024_12_21.txt  (+3 more)
(+8 files in other folders)
